# Learn_Computer_Vision_in_30_Days

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
1opencv/: 10perception_of_color.ipynb  2input_output.ipynb  4Colorspaces.ipynb  5blurring.ipynb  6threshold.ipynb  7edge_detection.ipynb  9contours.ipynb
opencv_basics/: 1what_are_images.ipynb  3basic_operations.ipynb  4Colorspaces.ipynb  5blurring.ipynb  6threshold.ipynb  7edge_detection.ipynb  8drawing.ipynb  code.py
project_detecting_colors_opencv/: README.md  main.py  notes.ipynb
project_face_detection_blurring_opencv/: README.md  image.py  img_vid_cam.py  notes.ipynb  utils.py
project_face_recognition_js/: README.md  index.html  notes.ipynb  script.js
project_image_classification_feature_extraction_scikit_learn/: main.ipynb  notes.ipynb
project_image_classification_scikit_learn/: main.ipynb  model.joblib  model.onnx  model.p  note.ipynb
project_image_segmentation_train_yolov8/: README.md  convert_to_polygons.py
project_object_tracking_YOLOv8/: README.md  main.py  yolov8n.ipynb
project_pose_detection_train_yolov8/: README.md  YOLOv8_dogs_pose_detection_training.ipynb  YOLOv8m_human_pose_detection_pretrained_no_training.ipynb  notes.ipynb
project_real-time_emotion_classifier/: data_preparing.py  model  notes.ipynb  test.py  train.py  utils.py
project_sign_language_detection_real_time/: README.md  collect_data.py  create_dateset.py  inference.py  notes.ipynb  sign_language_detection_create_dataset.ipynb  train.py
project_smart_attendence_app/: README.md  docker-compose.yml  (+1 more)
(+11 files in other folders)
