[project]
name = "learn-computer-vision-in-30-days"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "matplotlib>=3.10.8",
    "mediapipe==0.10.9",
    "numpy<2",
    "opencv-python<4.10",
    "pillow>=12.1.0",
    "protobuf<4",
]
